# translation-analyzer

./: CLAUDE.md  Cargo.toml  rustfmt.toml  translations-analyzer.d.ts
.github/workflows/: release.yml
src/: analyse_project_duplication.rs  entities.rs  get_translation_for_project.rs  lib.rs  load_translations.rs  main.rs  map_translations_by_key.rs  map_translations_by_project.rs  search_recursive_regex.rs  settings.rs  wasm.rs
src/commands/: CLAUDE.md  detailed_report.rs  global_report.rs  mod.rs
