[package]
name = "translations-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.37.2"
thiserror = "2.0.17"
serde_json = "1.0.139"
regex = "1.10"
rayon = "1.8"
parking_lot = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
clap = { version = "4.5.51", features = ["derive"] }