[package]
name = "translations-analyzer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "translations-analyzer"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
thiserror = "2.0.17"
serde_json = "1.0.139"
regex = "1.10"
parking_lot = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
once_cell = "1.21.3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Native-specific dependencies (for CLI and native features)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.8"
sysinfo = "0.37.2"
clap = { version = "4.5.51", features = ["derive"], optional = true }

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
wasm-bindgen-test = "0.3"

[features]
default = []
cli = ["clap"]

[profile.release]
opt-level = "z"
lto = true